--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">Architecture Sample</string>
-    <string name="track_all_your_k_pop_idols">Track all your K Pop Idols</string>
+    <string name="hello">Hello</string>
+    <string name="add">Add</string>
+    <string name="add_k_pop_idol">Add K pop idol</string>
+    <string name="stage_name">Stage Name</string>
+    <string name="type_stage_name">type stage name</string>
+    <string name="company">Company</string>
+    <string name="type_company">type company</string>
+    <string name="group">Group</string>
+    <string name="type_group">type group</string>
+    <string name="role">Role</string>
+    <string name="type_role">type role</string>
 </resources>
